batching rg grid load

--- a/grids.yaml
+++ b/grids.yaml
@@ -13,9 +13,10 @@ spec:
   - name: sync
     imagePullPolicy: Always
     image: argovis/grid-sync:rg
-    #command: ['sleep', '10000000000']
+    command: ['sleep', '10000000000']
     #command: ['python', 'translate-rg-grid.py', 'temp', 'total', '200401', 'base', 'https://sio-argo.ucsd.edu/gilson/argo_climatology/RG_ArgoClim_Temperature_2019.nc.gz']
-    command: ['python', 'translate-rg-grid.py', 'temp', 'total', '201901', '/tmp/rg/RG_ArgoClim_201901_2019.nc', 'https://sio-argo.ucsd.edu/gilson/argo_climatology/RG_ArgoClim_201901_2019.nc.gz']
+    #command: ['python', 'translate-rg-grid.py', 'temp', 'total', '201901', '/tmp/rg/RG_ArgoClim_201901_2019.nc', 'https://sio-argo.ucsd.edu/gilson/argo_climatology/RG_ArgoClim_201901_2019.nc.gz']
+    command: ['bash', 'rg-temp-total-batch.sh']
     #command: ['python', 'translate-rg-grid.py', 'psal', 'total', '200401', 'base', 'https://sio-argo.ucsd.edu/gilson/argo_climatology/RG_ArgoClim_Salinity_2019.nc.gz']
     #command: ['python', 'translate-ohc-grid.py']
     volumeMounts:
