--- a/grids.yaml
+++ b/grids.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: rgtemp-grid-load
+  name: ohc-grid-load
   labels:
     tier: api
 spec:
@@ -15,8 +15,8 @@ spec:
     image: argovis/grid-sync:rg
     #command: ['sleep', '10000000000']
     #command: ['bash', 'rg-temp-total-batch.sh']
-    command: ['bash', 'rg-psal-total-batch.sh']
-    #command: ['python', 'translate-ohc-grid.py']
+    #command: ['bash', 'rg-psal-total-batch.sh']
+    command: ['python', 'translate-ohc-grid.py']
     volumeMounts:
       - mountPath: "/tmp"
         name: grids
