--- a/pod.yaml
+++ b/pod.yaml
@@ -6,23 +6,23 @@ metadata:
     tier: api
 spec:
   volumes:
-    - name: argovis-bulk
+    - name: ccmp
       persistentVolumeClaim:
-        claimName: argovis-bulk
+        claimName: ccmp
   containers:
   - name: schema
     imagePullPolicy: Always
     image: argovis/grid-sync:dev
-    #command: ['sleep', '1000000']
-    command: ['bash', 'rg-update.sh']
+    command: ['sleep', '1000000']
+    #command: ['bash', 'rg-update.sh']
     volumeMounts:
       - mountPath: "/tmp"
-        name: argovis-bulk
+        name: ccmp
     resources:
       requests:
         memory: "0Gi"
         cpu: "0m"
       limits:
-        memory: 4000Mi
-        cpu: 1000m
+        memory: 1000Mi
+        cpu: 500m
   restartPolicy: Never
