--- a/pod.yaml
+++ b/pod.yaml
@@ -6,9 +6,9 @@ metadata:
     tier: api
 spec:
   volumes:
-    - name: ccmp
+    - name: rg
       persistentVolumeClaim:
-        claimName: ccmp
+        claimName: rg
   containers:
   - name: schema
     imagePullPolicy: Always
@@ -16,8 +16,8 @@ spec:
     command: ['sleep', '1000000']
     #command: ['bash', 'rg-update.sh']
     volumeMounts:
-      - mountPath: "/tmp"
-        name: ccmp
+      - mountPath: "/tmp/rg"
+        name: rg
     resources:
       requests:
         memory: "0Gi"
