--- a/pod.yaml
+++ b/pod.yaml
@@ -13,8 +13,8 @@ spec:
   - name: schema
     imagePullPolicy: Always
     image: argovis/grid-sync:dev
-    command: ['sleep', '1000000']
-    #command: ['bash', 'rg-update.sh']
+    #command: ['sleep', '1000000']
+    command: ['bash', 'append_rg_month.sh', '2024', '10']
     volumeMounts:
       - mountPath: "/tmp/rg"
         name: rg
@@ -24,5 +24,5 @@ spec:
         cpu: "0m"
       limits:
         memory: 1000Mi
-        cpu: 500m
+        cpu: 1000m
   restartPolicy: Never
